--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/icon.png" sizes="any">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">    <link rel="stylesheet" href="styles.css">
-    <title>Speedtest</title>
+    <title>Typing Speed Test</title>
 </head>
 <body>
     <button id="theme">
@@ -22,7 +23,7 @@
         </div>
     </section>
     <main>
-        <h1 id="title">Speedtest</h1>
+        <h1 id="title">TypingSpeedTest</h1>
         <div id="word-list" class="inactive"></div>
     </main>
     <section id="footer">
