--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/icon.png" sizes="any">
+    <link rel="icon" href="icon.png" sizes="any">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">    <link rel="stylesheet" href="styles.css">
     <title>Typing Speed Test</title>
 </head>
