--- a/typingspeedtest.html
+++ b/typingspeedtest.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="icon.png" sizes="any">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="typingspeedtest/icon.png" sizes="any">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="typingspeedtest/styles.css">
     <title>Typing Speed Test</title>
 </head>
 <body>
@@ -34,6 +35,6 @@
             <p>Sessions: <span id="sessions"></span></p>
         </section>
     </section>
-    <script src="script.js"></script>
+    <script src="typingspeedtest/script.js"></script>
 </body>
 </html>
